Update the build script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "dotenvx run -f ../.env -- vite",
-    "build": "dotenvx run -f ../.env -- vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
