--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "backend/server.js",
   "scripts": {
-    "start": "NODE_ENV=production node --env-file=.env backend/server.js",
+    "start": "NODE_ENV=production node backend/server.js",
     "build": "npm ci && npm install --prefix frontend && npm run build --prefix frontend",
     "dev": "NODE_ENV=development nodemon -L --env-file=.env backend/server.js"
   },
