--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "dotenvx run -f ../.env -- vite",
-    "build": "vite build",
+    "build": "dotenvx run -f ../.env -- vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "backend": "file:..",
     "framer-motion": "^11.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,7 +24,7 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.19.3",
+    "@dotenvx/dotenvx": "^1.20.0",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
